--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "fatihis, berkaypacal",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
