--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "joi": "^17.7.1"
+  },
+  "type": "module"
 }
